--- a/Blog.Web/Views/Home/Index.cshtml
+++ b/Blog.Web/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
                 <i style="font-weight: 400;">Eat Pray Garden</i><span style="font-weight: 300;"><br />Blogs Vlogs and Everything in Between</span>
             </h1>
             <p class="lead">
-                The intended direction of Muse in the Soil is to be a happy place 
+                The intended direction of Eat Pray Garden is to be a happy place 
                 for all plant lovers, moms, dads, dogs etc. Like or comment on any 
                 post your heart desires, I'd love to hear from you.
             </p>
