--- a/Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Blog.Web/Views/Shared/_Layout.cshtml
@@ -147,7 +147,7 @@
 
     <footer class="border-top footer text-muted bg-dark">
         <div class="container text-light">
-            &copy; 2023 - Eat Pray Garden - <a asp-area="" asp-controller="Home" asp-action="Privacy"><span class="text-light">Privacy</span></a>
+            &copy; 2023 - Eat Pray Garden @* - <a asp-area="" asp-controller="Home" asp-action="Privacy"><span class="text-light">Privacy</span></a> *@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
