--- a/Blog.Web/Views/Blogs/Index.cshtml
+++ b/Blog.Web/Views/Blogs/Index.cshtml
@@ -55,7 +55,7 @@
                     @Html.Raw(@Model.Content)
                 </div>
 
-                <div class="card">
+                <div class="card blog-comment-container">
                     <div class="card-header">
                         <h5>Comments</h5>
 
