--- a/Blog.Web/Views/Account/Login.cshtml
+++ b/Blog.Web/Views/Account/Login.cshtml
@@ -1,13 +1,12 @@
 ﻿@model Blog.Web.Models.ViewModels.LoginViewModel
 
-
 @{
 }
 
 
-<div class="container mx-auto">
+<div class="container mx-auto" style="height: 55em;">
     <div class="row justify-content-center">
-        <input class="col-12 col-lg-6">
+        <div class="col-12 col-lg-6">
 
             <h1 class="mb-3 h3 register-heading">
                 Login
