--- a/Blog.Web/Views/AdminBlogPosts/Add.cshtml
+++ b/Blog.Web/Views/AdminBlogPosts/Add.cshtml
@@ -83,9 +83,9 @@
 
 @section Scripts{
     <script>
-        var editor = new FroalaEditor('#content', {
-            imageUploadURL: '/api/images'
-        });
+        // var editor = new FroalaEditor('#content', {
+        //     imageUploadURL: '/api/images'
+        // });
 
         const featuredUpload = document.getElementById('featuredImageUpload');
         const featuredImageUrl = document.getElementById('featuredImageUrl');
