--- a/Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Blog.Web/Views/Shared/_Layout.cshtml
@@ -15,49 +15,49 @@
     <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/froala-editor@latest/js/froala_editor.pkgd.min.js'></script>
     <style>
         .dropdown-item:hover {
-            background-color: #3A3B3C;
+            /* background-color: #3A3B3C; */
         }
     </style>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm fixed-top navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow pb-3">
+        <nav class="navbar navbar-expand-sm fixed-top navbar-toggleable-sm navbar-dark bg-light border-bottom box-shadow">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Eat Pray Garden</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                <a class="navbar-brand text-dark" asp-area="" asp-controller="Home" asp-action="Index">Eat Pray Garden</a>
+                <button class="navbar-toggler text-dark" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon" style="background-color: #fff0f3;"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-light" 
+                         @* <li class="nav-item">
+                            <a class="nav-link text-dark" 
                                 asp-area="" 
                                 asp-controller="Home" 
                                 asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" 
+                            <a class="nav-link text-dark" 
                                 asp-area="" 
                                 asp-controller="Home" 
                                 asp-action="Index">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" 
+                            <a class="nav-link text-dark" 
                                 asp-area="" 
                                 asp-controller="Home" 
                                 asp-action="Index">Store</a>
-                        </li>
+                        </li>  *@
 
                         @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
                         {
                             <li class="nav-item dropdown my-sm-0">
-                                <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Admin
                                 </a>
-                                <ul class="dropdown-menu bg-dark">
+                                <ul class="dropdown-menu bg-light hover-light">
                                     <li>
-                                        <a class="dropdown-item text-light"
+                                        <a class="dropdown-item text-dark hover-light"
                                            asp-area=""
                                            asp-controller="AdminTags"
                                            asp-action="Add">
@@ -65,7 +65,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item text-light"
+                                        <a class="dropdown-item text-dark hover-light"
                                            asp-area=""
                                            asp-controller="AdminTags"
                                            asp-action="List">
@@ -73,23 +73,23 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item text-light"
+                                        <a class="dropdown-item text-dark hover-light"
                                            asp-area=""
                                            asp-controller="AdminBlogPosts"
                                            asp-action="Add">
                                             Add Blog Post
                                         </a>
                                     </li>
-                                    <li>
-                                        <a class="dropdown-item text-light"
+                                     <li>
+                                        <a class="dropdown-item text-dark hover-light"
                                            asp-area=""
                                            asp-controller="AdminBlogPosts"
                                            asp-action="List">
                                             All Blog Post
                                         </a>
-                                    </li>
+                                    </li> 
                                     <li>
-                                        <a class="dropdown-item text-light"
+                                        <a class="dropdown-item text-dark hover-light"
                                            asp-area=""
                                            asp-controller="AdminUsers"
                                            asp-action="List">
@@ -107,11 +107,11 @@
 
                         @if (signInManager.IsSignedIn(User))
                         {
-                            <div class="me-3 text-light">
+                            <div class="me-3 text-dark">
                                 Welcome,&nbsp;@User?.Identity?.Name
                             </div>
 
-                            <a class="btn me-3 bg-dark text-light"
+                            <a class="btn me-3 bg-light text-dark"
                                asp-area=""
                                asp-controller="Account"
                                asp-action="Logout">
@@ -120,14 +120,14 @@
                         }
                         else
                         {
-                            <a class="btn me-3 bg-dark text-light"
+                            <a class="btn me-3 bg-light text-dark"
                                asp-area=""
                                asp-controller="Account"
                                asp-action="Login">
                                 Login
                             </a>
 
-                            <a class="btn me-3 bg-dark text-light"
+                            <a class="btn me-3 bg-light text-dark"
                                asp-area=""
                                asp-controller="Account"
                                asp-action="Register">
@@ -140,13 +140,13 @@
         </nav>
     </header>
     <div>
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-3" style="background-color: #fff3f5;">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted bg-dark">
-        <div class="container text-light">
+    <footer class="border-top footer text-muted bg-light">
+        <div class="container text-dark">
             &copy; 2023 - Eat Pray Garden @* - <a asp-area="" asp-controller="Home" asp-action="Privacy"><span class="text-light">Privacy</span></a> *@
         </div>
     </footer>
