--- a/Blog.Web/Views/AdminBlogPosts/Add.cshtml
+++ b/Blog.Web/Views/AdminBlogPosts/Add.cshtml
@@ -2,13 +2,15 @@
 @{
 }
 
+<script src="https://cdn.tiny.cloud/1/2aul3z48mkrr3ou2em8z9rrjbtuu1adrznuyeq5o3qpekrln/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+
 <div class="bg-secondary bg-opacity-10 py-2">
     <div class="container">
         <h3>Add New Blog Post</h3>
     </div>
 </div>
 
-<div class="container py-5">
+<div class="container py-5 col-md-8">
     <form method="post">
         <div class="mb-3">
             <label clkass="form-label">Heading</label>
@@ -115,5 +117,39 @@
         featuredUpload.addEventListener('change', uploadFeaturedImage);
 
     </script>
+
+    <script type="text/javascript">
+        tinymce.init({
+            selector: 'textarea#content',
+            plugins: [
+                'advlist', 'autolink', 'link', 'image', 'lists', 'charmap', 'preview', 'anchor', 'pagebreak',
+                'searchreplace', 'wordcount', 'visualblocks', 'visualchars', 'code', 'fullscreen', 'insertdatetime',
+                'media', 'table', 'emoticons', 'Advanced Template', 'help'
+            ],
+            toolbar: 'undo redo | styles | bold italic | alignleft aligncenter alignright alignjustify | ' +
+                'bullist numlist outdent indent | link image | print preview media fullscreen | ' +
+                'forecolor backcolor emoticons | help',
+            menu: {
+                favs: { title: 'My Favorites', items: 'code visualaid | searchreplace | emoticons' }
+            },
+            menubar: 'favs file edit view insert format tools table help',
+            // content_css: 'css/content.css'
+        });
+    </script>
+
+    @* <script>
+        tinymce.init({
+            selector: 'textarea#content',
+            plugins: 'tinycomments mentions anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed permanentpen footnotes advtemplate advtable advcode editimage tableofcontents mergetags powerpaste tinymcespellchecker autocorrect a11ychecker typography inlinecss',
+            toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table mergetags | align lineheight | tinycomments | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
+            tinycomments_mode: 'embedded',
+            tinycomments_author: 'Author name',
+            mergetags_list: [
+                { value: 'First.Name', title: 'First Name' },
+                { value: 'Email', title: 'Email' },
+            ]
+            // ai_request: (request, respondWith) => respondWith.string(() => Promise.reject("See docs to implement AI Assistant"))
+        });
+    </script> *@
 }
             
