--- a/Blog.Web/wwwroot/css/site.css
+++ b/Blog.Web/wwwroot/css/site.css
@@ -45,3 +45,41 @@ body {
 .blog-comment-container {
     margin-top: 3em;
 }
+
+.hidden-lg {
+    display: none;
+}
+
+nav {
+    background-color: white;
+}
+
+.logo {
+    width: 11em;
+    padding-top: 0.2em;
+}
+
+.logo-anchor {
+    margin-left: 0.7em;
+}
+
+.lead {
+    padding-bottom: 3em;
+}
+
+.hero-section {
+    padding-top: 5em;
+}
+.blogs-home-container {
+    padding-top: 2em;
+}
+
+@media only screen and (max-width : 480px) {
+    .logo {
+        width: 10em;
+    }
+    .lead {
+        padding-bottom: 0em;
+    }
+    
+}
