updated favicon and homepage text

--- a/Blog.Web/Views/Blogs/Index.cshtml
+++ b/Blog.Web/Views/Blogs/Index.cshtml
@@ -7,6 +7,7 @@
     ViewData["Title"] = Model.PageTitle + " - Eat Pray Garden";
 }
 
+<meta name="description" content="Read the latest blog here." />
 
 <div class="container" style="padding-top: 6em;">
     <div class="row justify-content-center pt-5">
