--- a/Blog.Web/Views/AdminBlogPosts/Add.cshtml
+++ b/Blog.Web/Views/AdminBlogPosts/Add.cshtml
@@ -1,5 +1,7 @@
 ﻿@model Blog.Web.Models.ViewModels.AddBlogPostRequest
+
 @{
+    ViewData["Title"] = "Eat Pray Garden";
 }
 
 <script src="https://cdn.tiny.cloud/1/2aul3z48mkrr3ou2em8z9rrjbtuu1adrznuyeq5o3qpekrln/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
@@ -14,49 +16,49 @@
     <form method="post">
         <div class="mb-3">
             <label clkass="form-label">Heading</label>
-            <input type="text" class="form-control" id="heading" asp-for="Heading" />
+            <input type="text" class="form-control" id="heading" asp-for="Heading" required />
         </div>
 
         <div class="mb-3">
             <label class="form-label">Page Title</label>
-            <input type="text" class="form-control" id="pageTitle" asp-for="PageTitle" />
+            <input type="text" class="form-control" id="pageTitle" asp-for="PageTitle" required />
         </div>
 
         <div class="mb-3">
             <label class="form-label">Content</label>
-            <textarea type="text" class="form-control" id="content" asp-for="Content"></textarea>
+            <textarea type="text" class="form-control" id="content" asp-for="Content" required></textarea>
         </div>
 
         <div class="mb-3">
             <label class="form-label">Short Description</label>
-            <input type="text" class="form-control" id="shortDescription" asp-for="ShortDescription" />
+            <input type="text" class="form-control" id="shortDescription" asp-for="ShortDescription" required />
         </div>
 
         <div class="mb-3">
             <label class="form-label">Featured Image Upload</label>
-            <input type="file" id="featuredImageUpload" class="form-control" />
+            <input type="file" id="featuredImageUpload" class="form-control" required />
 
             <img src="" id="featuredImageDisplay" style="display: none; width: 300px;"/>
         </div>
 
         <div class="mb-3">
             <label class="form-label">Featured Image URL</label>
-            <input type="text" class="form-control" id="featuredImageUrl" asp-for="FeaturedImageUrl" />
+            <input type="text" class="form-control" id="featuredImageUrl" asp-for="FeaturedImageUrl" required />
         </div>
 
         <div class="mb-3">
             <label class="form-label">URL Handle</label>
-            <input type="text" class="form-control" id="urlHandle" asp-for="UrlHandle" />
+            <input type="text" class="form-control" id="urlHandle" asp-for="UrlHandle" required />
         </div>
 
         <div class="mb-3">
             <label class="form-label">Published Date</label>
-            <input type="date" class="form-control" id="publishedDate" asp-for="PublishedDate" />
+            <input type="date" class="form-control" id="publishedDate" asp-for="PublishedDate" required />
         </div>
 
         <div class="mb-3">
             <label class="form-label">Author</label>
-            <input type="text" class="form-control" id="author" asp-for="Author" />
+            <input type="text" class="form-control" id="author" asp-for="Author" required />
         </div>
 
         <div class="form-check mb-3">
@@ -135,6 +137,9 @@
             menubar: 'favs file edit view insert format tools table help',
             // content_css: 'css/content.css'
         });
+
+        document.getElementById("publishedDate").valueAsDate = new Date();
+
     </script>
 
     @* <script>
