--- a/Blog.Web/Views/AdminBlogPosts/Edit.cshtml
+++ b/Blog.Web/Views/AdminBlogPosts/Edit.cshtml
@@ -159,5 +159,8 @@
             menubar: 'favs file edit view insert format tools table help',
             // content_css: 'css/content.css'
         });
+
+        document.getElementById("publishedDate").valueAsDate = new Date();
+
     </script>
 }
