--- a/Blog.Web/Views/Shared/_Layout.cshtml
+++ b/Blog.Web/Views/Shared/_Layout.cshtml
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Blog.Web.styles.css" asp-append-version="true" />
-    <link rel="icon" href="@Url.Content("https://postcardsplus.com/images/newfavicon.ico")" />
-    <link rel="icon" type="image/png" sizes="16x16" href="https://postcardsplus.com/images/newfavicon.ico">
+    <link rel="icon" href="@Url.Content("https://postcardsplus.com/images/newFav.ico")" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://postcardsplus.com/images/newFav.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href='https://cdn.jsdelivr.net/npm/froala-editor@latest/css/froala_editor.pkgd.min.css' rel='stylesheet' type='text/css' />
     <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/froala-editor@latest/js/froala_editor.pkgd.min.js'></script>
@@ -23,19 +23,30 @@
             box-shadow: none !important;
             outline: none !important;       
         }
+        .navbar-collapse {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+        }
+        .admin-drop {
+            margin-left: 7.2em;
+        }
+        .admin-pre-drop {
+            margin-right: 2em;
+        }
     </style>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm fixed-top navbar-toggleable-sm navbar-dark  border-bottom box-shadow">
+        <nav class="navbar navbar-expand-xxxl fixed-top navbar-toggleable-xxxl navbar-dark  border-bottom box-shadow">
             <div class="container">
                 <a class="navbar-brand text-dark logo-anchor" asp-area="" asp-controller="Home" asp-action="Index"><span><img class="logo" src="/epg_logo.png" /></span></a>
-                <button class="navbar-toggler text-dark hamburger" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                <button class="navbar-toggler text-dark hamburger btn-login" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon" style="background-color: #ffe2e8"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-collapse collapse d-xxxl-inline-flex justify-content-between">
+                    <ul class="navbar-nav flex-grow-1 admin-pre-drop">
                          @* <li class="nav-item">
                             <a class="nav-link text-dark" 
                                 asp-area="" 
@@ -58,7 +69,7 @@
                         @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
                         {
                             <li class="nav-item dropdown my-sm-0">
-                                <a class="nav-link dropdown-toggle text-dark btn-login" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle text-dark btn-login admin-drop" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     Admin
                                 </a>
                                 <ul class="dropdown-menu bg-light hover-light">
@@ -109,7 +120,7 @@
                         
                     </ul>
 
-                    <div class="d-flex align-items-center" >
+                    <div class="d-flex align-items-center p-3" >
 
                         @if (signInManager.IsSignedIn(User))
                         {
