--- a/Blog.Web/wwwroot/css/site.css
+++ b/Blog.Web/wwwroot/css/site.css
@@ -74,12 +74,55 @@ nav {
     padding-top: 2em;
 }
 
+.photo {
+    margin: 4em auto;
+    position: relative;
+    box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.1), 0px 5px 2px rgba(0, 0, 0, 0.1);
+}
+
+    .photo:before {
+        content: "";
+        height: 4.2em;
+        width: 9em;
+        background-color: rgba(255, 255, 255, .4);
+        position: absolute;
+        top: -31px;
+        left: 19em;
+        transform: translateX(-30%) translateY(10%) rotate(-180deg);
+        box-shadow: 0px 0px 0.7px rgba(0, 0, 0, 0.2);
+    }
+
+@media only screen and (max-width : 1400px) and (min-width: 1200px) {
+
+    .photo:before {
+        left: 16em;
+    }
+}
+
+@media only screen and (max-width : 1199px) and (min-width: 992px) {
+
+    .photo:before {
+        left: 13em;
+    }
+}
+
+@media only screen and (max-width : 991) and (min-width : 768px) {
+
+    .photo:before {
+        left: 9em;
+    }
+}
+
 @media only screen and (max-width : 480px) {
     .logo {
         width: 10em;
     }
+
     .lead {
         padding-bottom: 0em;
     }
-    
+
+    .photo:before {
+        left: 12em;
+    }
 }
