updated color theme and like functionality

--- a/Blog.Web/Views/Home/Index.cshtml
+++ b/Blog.Web/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
         </div>
 
         <div class="col-12 col-lg-6 homepage-img">
-            <img class="d-block mx-lg-auto img-fluid" @* style="width: 40em;" *@src="/homepage-img.JPG" alt="" />
+            <img class="d-block mx-lg-auto img-fluid" @* style="width: 40em;" *@src="/img/homey-img.JPG" alt="" />
         </div>
     </div>
 </div>
