--- a/Blog.Web/Views/Account/Register.cshtml
+++ b/Blog.Web/Views/Account/Register.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<div class="container mx-auto" style="height: 55em;">
+<div class="container mx-auto">
     <div class="row justify-content-center">
         <div class="col-12 col-lg-6">
 
