--- a/Blog.Web/Views/AdminBlogPosts/Add.cshtml
+++ b/Blog.Web/Views/AdminBlogPosts/Add.cshtml
@@ -26,7 +26,7 @@
 
         <div class="mb-3">
             <label class="form-label">Content</label>
-            <textarea type="text" class="form-control" id="content" asp-for="Content" required></textarea>
+            <textarea type="text" class="form-control" id="content" asp-for="Content"></textarea>
         </div>
 
         <div class="mb-3">
@@ -118,9 +118,11 @@
 
         featuredUpload.addEventListener('change', uploadFeaturedImage);
 
+        document.getElementById("publishedDate").valueAsDate = new Date();
+
     </script>
 
-    <script type="text/javascript">
+    @* <script type="text/javascript">
         tinymce.init({
             selector: 'textarea#content',
             plugins: [
@@ -138,11 +140,11 @@
             // content_css: 'css/content.css'
         });
 
-        document.getElementById("publishedDate").valueAsDate = new Date();
+        
 
-    </script>
+    </script> *@
 
-    @* <script>
+    <script>
         tinymce.init({
             selector: 'textarea#content',
             plugins: 'tinycomments mentions anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount checklist mediaembed casechange export formatpainter pageembed permanentpen footnotes advtemplate advtable advcode editimage tableofcontents mergetags powerpaste tinymcespellchecker autocorrect a11ychecker typography inlinecss',
@@ -153,8 +155,8 @@
                 { value: 'First.Name', title: 'First Name' },
                 { value: 'Email', title: 'Email' },
             ]
-            // ai_request: (request, respondWith) => respondWith.string(() => Promise.reject("See docs to implement AI Assistant"))
+             //ai_request: (request, respondWith) => respondWith.string(() => Promise.reject("See docs to implement AI Assistant"))
         });
-    </script> *@
+    </script> 
 }
             
